All Language facts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <header>
     <h1>The three languages of the web</h1>
   </header>
+  <table style="width:100%">
+  <tr>
+    <th>Comparison Between 3 languages</th>
+</table>
 
   <main class="tab_container">
     
@@ -36,12 +40,34 @@
     <!-- content for tab 1: HTML5 -->
     <section id="content1" class="tab-content">
       <header>
-        <h2>HTML5</h2>
+        <h2>HTML5 Benefits</h2>
       </header>
-
+	  <table style="width:0%">
+  <tr>
       <table>
         <!-- one row of table header tags -->
         <!-- 5 rows of table data tags -->
+		
+		<tr>
+    <td>1 HTML5 will enable web designers to use cleaner, neater code.</td>
+	</tr>
+	
+	 <tr>
+    <td>2 HTML5 enables designers to use fancier forms.</td>
+	</tr>
+	
+	<tr>
+    <td>3 As we use adopt HTML5 elements it will bring more consistency.</td>
+	</tr>
+	
+	<tr>
+    <td>4 HTML5 has an built in capacbility to play audio and video</td>
+	</tr>
+	
+	<tr>
+    <td>5 HTML5 has aninbuilt capability to play audio and video.</td>
+	</tr>
+		
       </table>
 
       <footer>
@@ -52,22 +78,27 @@
     <!-- content for tab 2: CSS -->
     <section id="content2" class="tab-content">
       <header>
-        <h2>CSS</h2>
+        <h2>CSS Benefits</h2>
       </header>
 
       <ul>
-        <!-- 5 li tags -->
+ <li>Easier to maintain and update</li> 
+ <li>Greater consistency in design</li> 
+ <li>More formatting options</li> 
+ <li>Lightweight code </li> 
+ <li>Faster download times</li> 
+	
       </ul>
 
       <footer>
-        <p>add a link to a CSS resource (see the HTML link above)</p>
+        <p>add a linkdsff to a CSS resource (see the HTML link above)</p>
       </footer>
     </section>
 
     <!-- content for tab 3: JavaScript -->
     <section id="content3" class="tab-content">
       <header>
-        <h2>JavaScript</h2>
+        <h2>JavaScript Benefits</h2>
       </header>
 
       <dl>
